--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,11 @@
     <app-sidebar></app-sidebar>
   </mat-drawer>
   <mat-drawer-content>
-    <h1>Welcome</h1>
+    <!-- <h1>A Matter of Health</h1> -->
+    
     <router-outlet></router-outlet>    
   </mat-drawer-content>
 </mat-drawer-container>
+
 
 <app-footer></app-footer>
