--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -6,5 +6,9 @@
         <a href="list">List users</a>
     </mat-list-item>
 
+    <mat-list-item role="listitem">
+        <a href="salesend">Sales End</a>
+    </mat-list-item>
+
 </mat-list>
   
