fix Observable error

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <mat-list role="list">
-    <mat-list-item role="listitem">
+    <!-- <mat-list-item role="listitem">
         <a href="create">Add user</a>
     </mat-list-item>
     <mat-list-item role="listitem">
         <a href="list">List users</a>
-    </mat-list-item>
+    </mat-list-item> -->
 
     <mat-list-item role="listitem">
         <a href="salesend">Sales End</a>
