--- a/src/app/sales/salesend/salesend.component.html
+++ b/src/app/sales/salesend/salesend.component.html
@@ -8,7 +8,7 @@
 <!-- {{listSales | json}} -->
 
 <div class="mat-elevation-z8">
-<table mat-table  [dataSource]="listSales" class="mat-elevation-z8">
+<table mat-table  [dataSource]="dataSource" class="mat-elevation-z8">
 
     <ng-container matColumnDef="CategoryEN"> 
         <th mat-header-cell *matHeaderCellDef>Category</th>
@@ -64,13 +64,8 @@
     
     <ng-container matColumnDef="On_hand"> 
         <th mat-header-cell *matHeaderCellDef>ONHAND</th>
-        <td mat-cell *matCellDef="let sale">{{ sale.On_hand}}</td >
+        <td mat-cell *matCellDef="let sale"><b>{{ sale.On_hand}}</b></td >
     </ng-container>
-
-
-
-
-
 
 
     
@@ -79,6 +74,8 @@
 
 
 </table>
+
+<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 
 
 </div>
