--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 <mat-drawer-container class="example-container">
   <mat-drawer mode="side" opened class="sidebar">
-    <app-sidebar></app-sidebar>
+    <!-- <app-sidebar></app-sidebar> -->
   </mat-drawer>
   <mat-drawer-content>
     <!-- <h1>A Matter of Health</h1> -->
