--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,15 @@
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>A Matter of Health</span>
+  <span>A Matter of Health |</span>
   <span class="example-spacer"></span>
+  <mat-list-item role="listitem">
+    <a href="salesend">Sales End ||</a>
+</mat-list-item>
+<span class="example-spacer"></span>
+<mat-list-item role="listitem">
+    <a href="jjproducts">J&J |</a>
+</mat-list-item>
+
  
 </mat-toolbar>
