--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -9,6 +9,9 @@
     <mat-list-item role="listitem">
         <a href="salesend">Sales End</a>
     </mat-list-item>
+    <mat-list-item role="listitem">
+        <a href="jjproducts">J&J</a>
+    </mat-list-item>
 
 </mat-list>
   
