--- a/src/app/sales/salesend/salesend.component.html
+++ b/src/app/sales/salesend/salesend.component.html
@@ -67,6 +67,11 @@
         <td mat-cell *matCellDef="let sale"><b>{{ sale.On_hand}}</b></td >
     </ng-container>
 
+    <ng-container matColumnDef="Aisle" > 
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Aisle</th>
+        <td mat-cell *matCellDef="let sale"><b>{{ sale.Aisle}}</b></td >
+    </ng-container>
+
 
     
   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
@@ -75,7 +80,7 @@
 
 </table>
 
-<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+<mat-paginator [pageSizeOptions]="[50, 100, 200]" showFirstLastButtons></mat-paginator>
 
 
 </div>
